--- a/css/styles.css
+++ b/css/styles.css
@@ -8,3 +8,24 @@ h3,
 p {
   margin: 0;
 }
+
+/* sasha-slider */
+
+.sasha-slider {
+  width: 1194px;
+  padding: 0 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.sasha-slider .card-label {
+  width: 368px;
+  border: 1px solid #eeeeee;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+  text-align: center;
+  padding: 30px 0;
+  font-size: 20px;
+  line-height: 1.5;
+  font-weight: 700;
+}
