--- a/css/styles.css
+++ b/css/styles.css
@@ -8,3 +8,23 @@ h3,
 p {
   margin: 0;
 }
+a{text-decoration: none;} 
+
+body {
+  font-family: var(--primary-font);
+  background-color: yellowgreen;
+  color: black;
+  font-size: 35px;
+  letter-spacing: 0.03em;
+ 
+
+/* Alex CSS */
+.text-slider{
+  
+}
+.card{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 25px;
+}
