--- a/css/styles.css
+++ b/css/styles.css
@@ -8,3 +8,17 @@ h3,
 p {
   margin: 0;
 }
+.slider-wrap {
+  width: 1000px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.slick-prev:before, .slick-next:before {
+    font-family: 'slick';
+    font-size: 20px;
+    line-height: 1;
+    opacity: .75;
+    color: rgb(206, 27, 27);
+    }
