--- a/css/styles.css
+++ b/css/styles.css
@@ -8,3 +8,17 @@ h3,
 p {
   margin: 0;
 }
+
+.wrapper {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: auto;
+}
+
+.slick-prev:before, .slick-next:before {
+    font-family: 'slick';
+    font-size: 35px;
+    line-height: 1;
+    opacity: .75;
+    color: teal;
