--- a/css/styles.css
+++ b/css/styles.css
@@ -16,9 +16,11 @@ p {
   margin: auto;
 }
 
-.slick-prev:before, .slick-next:before {
-    font-family: 'slick';
-    font-size: 35px;
-    line-height: 1;
-    opacity: .75;
-    color: teal;
+.slick-prev:before,
+.slick-next:before {
+  font-family: "slick";
+  font-size: 35px;
+  line-height: 1;
+  opacity: 0.75;
+  color: teal;
+}
