--- a/css/styles.css
+++ b/css/styles.css
@@ -8,3 +8,11 @@ h3,
 p {
   margin: 0;
 }
+
+.Yaroslav-slider {
+  width: 1500px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
